Setting up Gemini and created generate-program page

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.15.0",
+    "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-slot": "^1.2.0",
     "@vapi-ai/web": "^2.2.5",
     "class-variance-authority": "^0.7.1",
