--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.15.0",
     "@google/generative-ai": "^0.24.0",
+    "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@vapi-ai/web": "^2.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
